Version 0.1.5
- Bugfix when calling new/constructor without arguments
- Inheritance of non-aoos classes - for S4 Method dispatch
- update to summary method for aoos
- New class 'Show' to easily override default show method for aoos classes

Version 0.1.4
- Bugfix in Class when constructing refClass with empty fields
- Updated behaviour of aoos classes. Leading '.' indicates a private member, all other names refer to public member
- New function private to declare a member to be private regardless of name
- Initialise method for aoos classes now properly passes arguments to init, so new can be used for initialisation
- Updated vignettes

Version 0.1.3
- New class 'Private' to add restricted access to methods and fields of reference classes

Version 0.1.2
- New function Class, which is a wrapper around setRefClass

Version 0.1.1

- Bugfix when accessing reference objects.

Version 0.1.0

- CRAN release

Version 0.0.6

- Handling of fields inheriting from 'environment'

Version 0.0.5

- Use the method public instead of publicFunction and publicValue
- Renaming of class oom to aoos
- Vignette: Introduction

Version 0.0.4

- Can define function 'init' which will be called if arguments are supplied to the constructor.
- defineClass has new side effect: S4 method for 'initialize'
- defineClass lost side effect: constructor is not assigned to the class-name
- Constructor functions can be named differnet from the class-name
- S4-constructor 'new' can be used to create a new object

Version 0.0.3

- Access self inside class definitions also for private objects.

Version 0.0.2

- Inheritance: Replacing members of parent is possible.
- Fix in package-tests, as there are some problems on CRAN.
- class oom is now VIRTUAL.
- summary method for oom.
- modified show method.