@@ -6,6 +6,7 @@ export(private)
 export(public)
 export(publicFunction)
 export(publicValue)
+exportClasses(Accessor)
 exportClasses(Private)
 exportClasses(Show)
 exportClasses(aoos)
