@@ -3,6 +3,7 @@ Version 0.1.5
 - Inheritance of non-aoos classes - for S4 Method dispatch
 - update to summary method for aoos
 - New class 'Show' to easily override default show method for aoos classes
+- New class 'Accessor' to override the default accessor for aoos classes
 
 Version 0.1.4
 - Bugfix in Class when constructing refClass with empty fields
